--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,13 @@
     ],
     "license": "MIT",
     "require": {
-        "php"              : "^7.1.3",
-        "fideloper/proxy"  : "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker"   : "^1.0",
+        "php": "^7.1.3",
+        "ext-json": "*",
+        "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "~6.0",
-        "ext-json"         : "*"
+        "laravel/framework": "5.8.*",
+        "laravel/tinker": "^1.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
